# GovernanceDecisionEngine

./: .gitignore  Demo.txt  README.md  config.ini  requirements.txt  setup.cfg  test.gov
besser/governance/engine/: DecisionEngine.py  collaboration_metamodel.py
besser/governance/language/: governance_language.tx  governance_metamodel.py
docs/source/: api.rst  conf.py  examples.rst  index.rst  quickstart.rst  release_notes.rst  wiki.rst
docs/source/examples/: PR_merger.rst
docs/source/release_notes/: v0.1.0.rst  v1.0.0.rst
docs/source/wiki/: engine.rst  language.rst
governance/engine/: collaboration_metamodel.py  decision_engine.py  decision_engine_demo.py  events.py  helpers.py  parsing.py  playground_launcher.py  policy_visitor.py  state_bodies.py
governance/engine/semantics/: actions.py  collaboration_metamodel.py  helpers.py  policy_visitor.py  runtime_metamodel.py  scope_comparator.py
governance/engine/testing/: helpers.py  hooks.py  platform_mock.py
governance/language/: governance_metamodel.py
governance/tests/: majority_policy.txt  test.gov
governance/tests/collaboration/: BasicTests.py  MajorityTest.py  PolicyTest.py  test_policy_engine.py
governance/tests/engine/: MajorityTests.py  ParticipantTests.py  PolicyTests.py  ScopeTests.py
governance/tests/ethicalsource/: ethicalsource_merge_policy.py  result_ethicalsource
governance/tests/framework/: assert_builder.py  engine_testing.py
tests/: majority_policy.txt
tests/collaboration/: BasicTests.py  MajorityTest.py
tests/multiagent/: ui_agent.py
(+20 files in other folders)
