[metadata]
name = besser-governance-engine
version = 1.0.0
author = Luxembourg Institute of Science and Technology
description = BESSER Governance Engine (BGE)
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://besser-governance-engine.readthedocs.io/
    Source Code = https://github.com/BESSER-PEARL/BESSER-Governance-Engine
    Bug Tracker = https://github.com/BESSER-PEARL/BESSER-Governance-Engine/issues
keywords = agent, bot, governance
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.10
packages = find: